tests/ui/unboxed-closures/non-tupled-arg-mismatch.stderr
error[E0059]: type parameter to bare `Fn` trait must be a tuple
  --> $DIR/non-tupled-arg-mismatch.rs:3:9
   |
LL | fn a<F: Fn<usize>>(f: F) {}
   |         ^^^^^^^^^ the trait `Tuple` is not implemented for `usize`
   |
note: required by a bound in `Fn`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error[E0308]: mismatched types
  --> $DIR/non-tupled-arg-mismatch.rs:7:5
   |
LL |     a(|_: usize| {});
   |     ^^^^^^^^^^^^^^^^ types differ
   |
   = note: expected trait `Fn<usize>`
              found trait `Fn(usize)`
note: required by a bound in `a`
  --> $DIR/non-tupled-arg-mismatch.rs:3:9
   |
LL | fn a<F: Fn<usize>>(f: F) {}
   |         ^^^^^^^^^ required by this bound in `a`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0059, E0308.
For more information about an error, try `rustc --explain E0059`.
